--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
