--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
