--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mui-tiptap": "^1.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0",
     "sass": "^1.68.0"
